# silly_dl

./: LICENSE  README.md  pyproject.toml
scripts/: train_mnist_dense.py
silly_dl/: datasets.py  layers.py  network.py
